flywheel/iptables.txt
# Generated by iptables-save v1.4.21 on Mon Dec 11 10:24:27 2023
*nat
:PREROUTING ACCEPT [102:11867]
:INPUT ACCEPT [81:10146]
:OUTPUT ACCEPT [14:1221]
:POSTROUTING ACCEPT [14:1249]
-A PREROUTING -p tcp -m tcp --dport 8000 -j DNAT --to-destination 192.168.122.2:8000
-A PREROUTING -p tcp -m tcp --dport 80 -j DNAT --to-destination 192.168.122.2:80
-A POSTROUTING -s 192.168.122.0/24 -d 224.0.0.0/24 -j RETURN
-A POSTROUTING -s 192.168.122.0/24 -d 255.255.255.255/32 -j RETURN
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p tcp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p udp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -j MASQUERADE
COMMIT
# Completed on Mon Dec 11 10:24:27 2023
# Generated by iptables-save v1.4.21 on Mon Dec 11 10:24:27 2023
*mangle
:PREROUTING ACCEPT [3566:569289]
:INPUT ACCEPT [2358:219458]
:FORWARD ACCEPT [1207:349580]
:OUTPUT ACCEPT [1371:179311]
:POSTROUTING ACCEPT [2619:530331]
-A POSTROUTING -o virbr0 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
COMMIT
# Completed on Mon Dec 11 10:24:27 2023
# Generated by iptables-save v1.4.21 on Mon Dec 11 10:24:27 2023
*filter
:INPUT ACCEPT [2337:217096]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1366:178667]
-A INPUT -i virbr0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i virbr0 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i virbr0 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i virbr0 -p tcp -m tcp --dport 67 -j ACCEPT
-A FORWARD -d 192.168.122.2/32 -o virbr0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A FORWARD -d 192.168.122.2/32 -o virbr0 -p tcp -m tcp --dport 80 -j ACCEPT
-A FORWARD -d 192.168.122.0/24 -o virbr0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.122.0/24 -i virbr0 -j ACCEPT
-A FORWARD -i virbr0 -o virbr0 -j ACCEPT
-A FORWARD -o virbr0 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i virbr0 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -o virbr0 -p udp -m udp --dport 68 -j ACCEPT
COMMIT
# Completed on Mon Dec 11 10:24:27 2023
